# posture-system-rebuild

./: .gitignore
data_controller/: CMakeLists.txt  sdkconfig  sdkconfig.old
data_controller/main/: CMakeLists.txt  adc_communicator.c  data_reading.c  my_adc.h  my_uart.h
interfaces/bluetooth/: bluetooth.c  bluetooth.h  bluetooth_config.h
interfaces/data_transer/: data_transer.c  data_transer.h
interfaces/ds1302/: ds1302.c
interfaces/spiffs/: spiffs.c  spiffs.h
interfaces/uart/: uart.c  uart.h
interfaces/wifi/: wifi_ap.c  wifi_sta.c
main_controller/: CMakeLists.txt  data_load_form_esp.sh  load.sh  load_data.sh  load_scripts.sh  partitions.csv  sdkconfig  sdkconfig.old  sdkconfigs
main_controller/data/: app_install.js  asset-manifest.json  index.html  manifest.json  service_worker.js  service_worker_reg.js  style.css
main_controller/data/scripts/: app.js  logic.js  service_worker_reg.js
main_controller/data/static/css/: main.16100098.css  main.16100098.css.map  main.22ecb1e3.css
main_controller/data/static/js/: main.2d11e9eb.js  main.71a5f757.js  main.7b843bc9.js  main.c83675c0.js  main.db7825dc.js  main.db7825dc.js.map  main.e3dc72b6.js
main_controller/data_test/scripts/: logic.js  service_worker.js  service_worker_reg.js
main_controller/main/: CMakeLists.txt  Kconfig.projbuild  data_interface.h  main.c  server.h  sort.c  sort.h  spiffs_communicator.c  struct_serialization.c  struct_serialization.h  uart_connection.c  wifi.h  wifi_ap_setup.c
main_controller/main/certs/: cacert.pem  prvtkey.pem
main_controller/main/https/: server.c  server.h
my_interfaces/adc/: adc.c  adc.h
my_interfaces/htttps/: server.c
my_interfaces/spiffs/: spiffs.h
my_interfaces/uart/: uart.c
